Complete prediction functionality, create separate prediction page.

--- a/CarPricePredictor.ipynb
+++ b/CarPricePredictor.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "d5be5baf-9584-49fa-bd10-85ca1301859c",
    "metadata": {},
    "outputs": [],
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "dd62aa86-e7cb-4d3c-94f4-4cfee8c4ac08",
    "metadata": {},
    "outputs": [],
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "a9444db8-2523-4c2e-8932-73b9269c475d",
    "metadata": {},
    "outputs": [
@@ -185,7 +185,7 @@
        "4         570000  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -204,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "ea22e022-08bc-4934-a1b3-b71b9fd4b745",
    "metadata": {},
    "outputs": [
@@ -241,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "acf3884c-42ad-487f-a4eb-94567bc9c588",
    "metadata": {},
    "outputs": [
@@ -382,7 +382,7 @@
        "max        9.000000   3.950000e+07  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -393,17 +393,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "8fea9e8f-e4c6-4ccb-9307-37f62b840dfe",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.PairGrid at 0x2637fcff380>"
+       "<seaborn.axisgrid.PairGrid at 0x1f6f63a1fd0>"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -424,7 +424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "7e9ebeef-6ce8-476c-b2eb-1f29c32f9f9a",
    "metadata": {},
    "outputs": [
@@ -434,7 +434,7 @@
        "<Axes: >"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -455,7 +455,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "bcf84063-25b6-4dba-b1fe-a562db2b3abd",
    "metadata": {},
    "outputs": [
@@ -465,7 +465,7 @@
        "<Axes: xlabel='selling_price', ylabel='Count'>"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -494,7 +494,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "2b38c9fc-66d8-4e1d-81d2-f7bf9695d5b5",
    "metadata": {},
    "outputs": [
@@ -642,7 +642,7 @@
        "4         570000  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -653,7 +653,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "f5e72c8a-3aef-41a2-ad88-972d99bd6344",
    "metadata": {},
    "outputs": [
@@ -676,7 +676,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -687,7 +687,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "eb3203b6-4739-4dbd-b0ab-886c5eeebb0e",
    "metadata": {},
    "outputs": [
@@ -710,7 +710,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -722,7 +722,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "id": "858ce2e3-4704-44b2-a23d-86094d3d7194",
    "metadata": {},
    "outputs": [
@@ -857,7 +857,7 @@
        "4            Manual    22.77    1498      98.59      5         570000  "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -872,7 +872,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "id": "18724a84-62e8-4a09-a663-f7f25f9ae93c",
    "metadata": {},
    "outputs": [
@@ -887,7 +887,7 @@
        "       'Rolls-Royce', 'Force'], dtype=object)"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -898,7 +898,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "id": "391b8e19-876e-4fd1-bd1f-60943ac5e62a",
    "metadata": {},
    "outputs": [
@@ -941,7 +941,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -952,7 +952,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "id": "f455fe1c-07f9-45af-b1c0-d9a386728ca6",
    "metadata": {},
    "outputs": [
@@ -1087,7 +1087,7 @@
        "4            Manual    22.77    1498      98.59      5         570000  "
       ]
      },
-     "execution_count": 16,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1100,7 +1100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "id": "2dd44f40-9863-4197-89bd-ae39236fd459",
    "metadata": {},
    "outputs": [
@@ -1115,7 +1115,7 @@
        "       'Force'], dtype=object)"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1126,7 +1126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "id": "71fea791-c012-4667-87de-bba61062dc85",
    "metadata": {},
    "outputs": [
@@ -1168,7 +1168,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1179,7 +1179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "id": "2352712c-3ef3-4874-8dc0-3b9d7c11ed21",
    "metadata": {},
    "outputs": [
@@ -1206,7 +1206,7 @@
        "       'Gurkha'], dtype=object)"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1217,7 +1217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "id": "39380de5-d6a7-4fee-b922-a0a0fd90215b",
    "metadata": {},
    "outputs": [
@@ -1346,7 +1346,7 @@
        "4    22.77    1498      98.59      5         570000  "
       ]
      },
-     "execution_count": 20,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1359,7 +1359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "id": "a284d4d1-ad42-474a-a1a4-578d77c4f440",
    "metadata": {},
    "outputs": [
@@ -1369,7 +1369,7 @@
        "array(['Individual', 'Dealer', 'Trustmark Dealer'], dtype=object)"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1380,7 +1380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 21,
    "id": "74b9e918-18e2-4480-81e2-1fe32cba38ec",
    "metadata": {},
    "outputs": [
@@ -1390,7 +1390,7 @@
        "array(['Petrol', 'Diesel', 'CNG', 'LPG', 'Electric'], dtype=object)"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1401,7 +1401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 22,
    "id": "8c872294-9607-4f2a-a696-1ac4766d982a",
    "metadata": {},
    "outputs": [
@@ -1411,7 +1411,7 @@
        "array(['Manual', 'Automatic'], dtype=object)"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1422,7 +1422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 23,
    "id": "03306358-eb1b-4a53-bc6e-3044f3242b06",
    "metadata": {},
    "outputs": [
@@ -1615,7 +1615,7 @@
        "16554         Automatic    10.93    3498     272.00      2        1996000  "
       ]
      },
-     "execution_count": 24,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1628,7 +1628,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 24,
    "id": "9ed0027a-7fac-4d15-84e0-a732893295a8",
    "metadata": {},
    "outputs": [
@@ -1647,7 +1647,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1658,7 +1658,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 25,
    "id": "c565bfcf-6f17-4117-b946-86a2d1dd1494",
    "metadata": {},
    "outputs": [
@@ -1676,7 +1676,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1698,7 +1698,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 26,
    "id": "ff4bfac5-1445-41a5-9e64-965cb3aed3d1",
    "metadata": {},
    "outputs": [
@@ -1827,7 +1827,7 @@
        "4    22.77    1498      98.59      5         570000  "
       ]
      },
-     "execution_count": 27,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1838,7 +1838,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 27,
    "id": "6f80a5b6-b379-40c0-aa76-409f391bb172",
    "metadata": {},
    "outputs": [
@@ -1880,13 +1880,88 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "df['brand'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "15ae273d-a0c1-4e86-b8e3-bfa684841238",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'Maruti': 4992,\n",
+       " 'Hyundai': 2982,\n",
+       " 'Honda': 1485,\n",
+       " 'Mahindra': 1011,\n",
+       " 'Toyota': 793,\n",
+       " 'Ford': 790,\n",
+       " 'Volkswagen': 620,\n",
+       " 'Renault': 536,\n",
+       " 'BMW': 439,\n",
+       " 'Tata': 430,\n",
+       " 'Mercedes-Benz': 337,\n",
+       " 'Skoda': 334,\n",
+       " 'Audi': 192,\n",
+       " 'Datsun': 170,\n",
+       " 'Jaguar': 59,\n",
+       " 'Land Rover': 51,\n",
+       " 'Jeep': 41,\n",
+       " 'Kia': 32,\n",
+       " 'Porsche': 21,\n",
+       " 'Volvo': 20,\n",
+       " 'MG': 19,\n",
+       " 'Mini': 17,\n",
+       " 'Nissan': 11,\n",
+       " 'Lexus': 10,\n",
+       " 'Isuzu': 10,\n",
+       " 'Bentley': 3,\n",
+       " 'Maserati': 2,\n",
+       " 'Ferrari': 1,\n",
+       " 'Mercedes-AMG': 1,\n",
+       " 'Rolls-Royce': 1,\n",
+       " 'Force': 1}"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "brand_freq_map = df['brand'].value_counts().to_dict()\n",
+    "brand_freq_map"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "92632b2a-1c82-4f5e-9707-6517aa03d4f1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['webapp/brand_freq_map.joblib']"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import joblib\n",
+    "\n",
+    "joblib.dump(brand_freq_map, \"webapp/brand_freq_map.joblib\")"
    ]
   },
   {
@@ -6443,16 +6518,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
-   "id": "5565ed35-103d-4d10-86fc-0c7a9b951386",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import joblib"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 67,
    "id": "f9cef1f7-5d02-4a69-a196-5afa415bff50",
    "metadata": {},
@@ -6607,7 +6672,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.13.3"
   }
  },
  "nbformat": 4,
